--- a/2023/2023-03-14-pi.md
+++ b/2023/2023-03-14-pi.md
@@ -6,6 +6,13 @@ paginate: true
 
 Tam
 
+<!-- 
+$theme: gaia
+template: invert
+-->
+
+<!-- footer: Tam -->
+
 ---
 ## 円周率とは？
 
@@ -198,7 +205,7 @@ tan^{-1}(1) = 1 - 1/3 + 1/5 - 1/7 + 1/9 - 1/11 +- ...
 収束はそれほど速くありませんが,
 2進数での円周率の目的の桁を直接計算できる！
 
-
+⇛中国剰余定理で計算結果の検証ができる.
 
 
 
