--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -14,8 +14,58 @@ template: invert
 <!-- footer: JavaScript 入門講座 第１回 -->
 
 ---
+## 様々な開発言語
+
+- プログラムを書くための言語は何種類もあります。
+
+- それぞれに一長一短があり、得意な領域や不得意な領域を抱えています。
+
+- 通常は, それぞれの得意領域を組み合わせて複数の言語でシステムを作り上げます。
+
+- すべてを理解するのは到底不可能なので、各言語に特化した複数の人がチームになってシステムを組み上げます。
+
+---
+## 言語の例
+
+- Java
+
+Android などの開発言語としてもてはやされている。出た当初はクライアント側での動作がメインだったが、サーバー側で動くプログラムも結構出てきている。
+
+- Ruby
+
+日本人が開発した言語。主にサーバーサイドで DB を扱うプログラムに長けている。
+
+- C言語
+
+歴史的に古い言語だが, ハードウェアに近いプログラムがほぼこの言語で書かれている。
+
+---
+## LAMP 環境
+
+以下の環境でシステムを構築するのがデファクト・スタンダードになっている。
+
+- Linux
+
+OS に Linux を採用する。
+
+- Apache
+
+古くからある Web サーバであり, 使いやすく堅牢な性能を誇る。
+
+- MySQL
+
+オープンソースで開発されている DB サーバ。
+
+- PHP
+
+バックエンド（サーバー側）のプログラムとしてプラットフォームやライブラリが整備されており、多くの開発者にとって馴染みのある言語となっている。
+
+---
 ## JavaScript とは？
 
+
+
+---
 ### 百聞は一見にしかず、習うより慣れろ
 
 というわけで動かしてみましょう。
