--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -64,6 +64,34 @@ OS に Linux を採用する。
 ## JavaScript とは？
 
 
+---
+## 練習
+
+まずは HTML から練習しましょう。
+
+~~~sample0000.html
+<html>
+<head>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
+~~~
+
+
+---
+## HTML の構造
+
+~~~sample0000.html
+<html>
+<head>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
+~~~
 
 ---
 ### 百聞は一見にしかず、習うより慣れろ
