--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -69,6 +69,8 @@ OS に Linux を採用する。
 
 まずは HTML から練習しましょう。
 
+すべて「半角」で入力してください。
+
 ~~~sample0000.html
 <html>
 <head>
@@ -79,6 +81,7 @@ OS に Linux を採用する。
 </html>
 ~~~
 
+※「全角」（日本語入力モード）は使わないでください。
 
 ---
 ## HTML の構造
@@ -87,8 +90,34 @@ OS に Linux を採用する。
 <html>
 <head>
 </head>
-<body>
+<body>  ← 開始タグ
     <h1>Hello World</h1>
+</body>  ← 終了タグ
+</html>
+~~~
+
+---
+## シングルタグ
+
+~~~sample0000.html
+<html>
+<head>
+</head>
+<body>
+    <h1>Hello<br />World</h1>
+</body>
+</html>
+~~~
+
+---
+## 属性(attribute)
+
+~~~sample0000.html
+<html>
+<head>
+</head>
+<body>
+    <a href="http://www.google.co.jp">Google</a>
 </body>
 </html>
 ~~~
@@ -96,7 +125,7 @@ OS に Linux を採用する。
 ---
 ### 百聞は一見にしかず、習うより慣れろ
 
-というわけで動かしてみましょう。
+というわけで JavaScript を動かしてみましょう。
 
 JavaScript はブラウザでも動かせます。次のページにサンプルがありますので、 HTML ファイルとして入力して、実際に動かしてみてください。
 
