--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -61,6 +61,11 @@ OS に Linux を採用する。
 バックエンド（サーバー側）のプログラムとしてプラットフォームやライブラリが整備されており、多くの開発者にとって馴染みのある言語となっている。
 
 ---
+## LAMP 構造
+
+![](./2024-07-11-LAMP.png)
+
+---
 ## JavaScript とは？
 
 
@@ -140,7 +145,7 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
     <meta charset="UTF-8">
     <script type="text/javascript">
         // コメント
-        alert("Hello World!);
+        alert("Hello World!");
         /* アラートが表示されます。 */
     </script>
 </head>
