--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -162,10 +162,10 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript">
-        var d = new Date();
-        var h = d.getHours();
-        var m = d.getMinutes();
-        var s = d.getSeconds();
+        let d = new Date();
+        let h = d.getHours();
+        let m = d.getMinutes();
+        let s = d.getSeconds();
         document.writeln(h + "時" + m + "分" + s + "秒");
     </script>
 </head>
@@ -189,29 +189,85 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
 ~~~
 
 ~~~sample0030.js
-var d = new Date();
-var h = d.getHours();
-var m = d.getMinutes();
-var s = d.getSeconds();
+let d = new Date();
+let h = d.getHours();
+let m = d.getMinutes();
+let s = d.getSeconds();
 document.writeln(h + "時" + m + "分" + s + "秒");
+~~~
+
+---
+## エラーが出たとき
+
+ブラウザだと、デバッグコンソールでエラーが表示できます。
+
+おかしな挙動が出てきたら、エラーを確認するようにしましょう。
+
+~~~sample0031.js
+let tmp = 6 / 0;
+document.writeln(tmp);
 ~~~
 
 ---
 ## コメントの書き方
 
-~~~sample0040.html
-<html>
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript">
-        // １行コメント
-        alert("Hello World!);
-        /*
-            複数行コメント
-        */
-    </script>
-</head>
-<body>
-</body>
-</html>
+~~~sample0040.js
+// 現在時刻を求める。
+let d = new Date();
+
+let h = d.getHours(); // 時
+let m = d.getMinutes(); // 分
+let s = d.getSeconds(); // 秒
+/*
+    時刻を表示する。
+*/
+document.writeln(h + "時" + m + "分" + s + "秒");
+~~~
+
+---
+## 繰り返し文
+
+1 から 10 までの数の和を求めましょう。
+
+~~~sample0050.js
+let result = 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10;
+document.writeln(result);
+~~~
+
+~~~sample0051.js
+let result = 0;
+for (let i = 1; i <= 10; i++) {
+    result = result + i;
+}
+document.writeln(result);
+~~~
+
+---
+## 公式を使う
+
+~~~sample0060.js
+let reuslt = 10 * 11 / 2;
+document.writeln(result);
+~~~
+
+次に、 1 から 20 までの数の和を求めてください。
+
+~~~sample0061.js
+let reuslt = 20 * 21 / 2;
+document.writeln(result);
+~~~
+
+---
+## 関数
+
+同じことをする部分をまとめます。
+
+~~~sample0070.js
+function sum(num) {
+    let result = num * (num + 1) / 2;
+    return result;
+}
+
+let result = sum(100);
+document.writeln(result);
 ~~~
