--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -268,6 +268,9 @@ function sum(num) {
     return result;
 }
 
-let result = sum(100);
+let result = sum(10);
+document.writeln(result);
+
+result = sum(20);
 document.writeln(result);
 ~~~
