--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -4,105 +4,14 @@ paginate: true
 ---
 # リスキリング
 
-JavaScript 第１回（全３回） / 全７回
+JavaScript 第２回 / 全６回
 
 <!-- 
 $theme: gaia
 template: invert
 -->
 
-<!-- footer: リスキリング JS-1 -->
-
----
-## JavaScript とは？
-
-### 百聞は一見にしかず、習うより慣れろ
-
-というわけで動かしてみましょう。
-
-JavaScript はブラウザでも動かせます。次のページにサンプルがありますので、 HTML ファイルとして入力して、実際に動かしてみてください。
-
-※コピー＆ペーストを活用してください。
-
----
-## sample0010.html
-
-~~~sample0010.html
-<html>
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript">
-        // コメント
-        alert("Hello World!);
-        /* アラートが表示されます。 */
-    </script>
-</head>
-<body>
-</body>
-</html>
-~~~
-
----
-## 時計を表示してみましょう。
-
-~~~sample0020.html
-<html>
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript">
-        var d = new Date();
-        var h = d.getHours();
-        var m = d.getMinutes();
-        var s = d.getSeconds();
-        document.writeln(h + "時" + m + "分" + s + "秒");
-    </script>
-</head>
-<body>
-</body>
-</html>
-~~~
-
----
-## JavaScript 部分を別ファイルに分離してみましょう。
-
-~~~sample0030.html
-<html>
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="sample0030.js"></script>
-</head>
-<body>
-</body>
-</html>
-~~~
-
-~~~sample0030.js
-var d = new Date();
-var h = d.getHours();
-var m = d.getMinutes();
-var s = d.getSeconds();
-document.writeln(h + "時" + m + "分" + s + "秒");
-~~~
-
----
-## コメントの書き方
-
-~~~sample0040.html
-<html>
-<head>
-    <meta charset="UTF-8">
-    <script type="text/javascript">
-        // １行コメント
-        alert("Hello World!);
-        /*
-            複数行コメント
-        */
-    </script>
-</head>
-<body>
-</body>
-</html>
-~~~
+<!-- footer: JavaScript 入門講座 第２回 -->
 
 ---
 ## 関数に分離してみましょう。
