--- a/2024/2024-07-11-js-lecture1.md
+++ b/2024/2024-07-11-js-lecture1.md
@@ -155,6 +155,27 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
 ~~~
 
 ---
+## エラーが出たとき
+
+ブラウザだと、デバッグコンソールでエラーが表示できます。
+
+おかしな挙動が出てきたら、エラーを確認するようにしましょう。
+
+~~~sample0011.html
+<html>
+<head>
+    <meta charset="UTF-8">
+    <script type="text/javascript">
+        // 0 除算をして、エラーを無理やり出す。
+        let tmp = 10 / 0;
+    </script>
+</head>
+<body>
+</body>
+</html>
+~~~
+
+---
 ## 時計を表示してみましょう。
 
 ~~~sample0020.html
@@ -194,18 +215,6 @@ let h = d.getHours();
 let m = d.getMinutes();
 let s = d.getSeconds();
 document.writeln(h + "時" + m + "分" + s + "秒");
-~~~
-
----
-## エラーが出たとき
-
-ブラウザだと、デバッグコンソールでエラーが表示できます。
-
-おかしな挙動が出てきたら、エラーを確認するようにしましょう。
-
-~~~sample0031.js
-let tmp = 6 / 0;
-document.writeln(tmp);
 ~~~
 
 ---
@@ -263,14 +272,17 @@ document.writeln(result);
 同じことをする部分をまとめます。
 
 ~~~sample0070.js
+// ここでは関数を定義するだけ。
 function sum(num) {
     let result = num * (num + 1) / 2;
     return result;
 }
 
+// 以下で初めて関数が実行される。
 let result = sum(10);
 document.writeln(result);
 
+// 以下で再び関数が実行される。
 result = sum(20);
 document.writeln(result);
 ~~~
