--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -2,7 +2,7 @@
 marp: true
 paginate: true
 ---
-# リスキリング
+# JavaScript 入門講座
 
 JavaScript 第２回 / 全６回
 
@@ -14,7 +14,26 @@ template: invert
 <!-- footer: JavaScript 入門講座 第２回 -->
 
 ---
-## 関数に分離してみましょう。
+## 関数（復習）
+
+~~~sample0070.js
+// ここでは関数を定義するだけ。
+function sum(num) {
+    let result = num * (num + 1) / 2;
+    return result;
+}
+
+// 以下で初めて関数が実行される。
+let result = sum(10);
+document.writeln(result);
+
+// 以下で再び関数が実行される。
+result = sum(20);
+document.writeln(result);
+~~~
+
+---
+## 時計を関数に分離してみましょう。
 
 ~~~sample0050.js
 // 関数を定義
@@ -70,7 +89,7 @@ const country = "日本";         // 国籍は日本
 const sales_tax_rate = 0.10;    // 消費税率は 10%
 ~~~
 
-定数をうまく利用すると、成人年齢が引き下げられたときや、消費税率が変更されたときなどに、必要最低限の変更で対応することが出来るようになる。
+定数をうまく利用すると、成人年齢が引き下げられたときや、消費税率が変更されたときなどに、必要最低限のプログラム変更で対応することが出来るようになります。
 
 ---
 ## スコープ１
@@ -200,7 +219,7 @@ console.log(msg);
 | != | 左右が等しくなければ true 、等しいとき false |
 | === | 左右の「値」と「型」がどちらも一致すれば true 、それ以外は false |
 
-> ※注意： `=>` や `=<` といった比較演算子は間違いです。
+※注意： `=>` や `=<` といった比較演算子は間違いです。
 
 ---
 ## 論理演算子
