--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -38,10 +38,10 @@ document.writeln(result);
 ~~~sample0050.js
 // 関数を定義
 function display() {
-    var d = new Date();
-    var h = d.getHours();
-    var m = d.getMinutes();
-    var s = d.getSeconds();
+    let d = new Date();
+    let h = d.getHours();
+    let m = d.getMinutes();
+    let s = d.getSeconds();
     document.writeln(h + "時" + m + "分" + s + "秒");
 }
 
@@ -54,10 +54,10 @@ display(); // 関数を実行
 ~~~sample0060.js
 // 関数を定義
 function display() {
-    var d = new Date();
-    var h = d.getHours();
-    var m = d.getMinutes();
-    var s = d.getSeconds();
+    let d = new Date();
+    let h = d.getHours();
+    let m = d.getMinutes();
+    let s = d.getSeconds();
     document.writeln(h + "時" + m + "分" + s + "秒");
 }
 
@@ -135,7 +135,7 @@ test();
 function test() {
     var a = 1;
     {
-        var a = 2;
+        a = 2;
     }
     console.log(a);
 }
@@ -153,11 +153,11 @@ test();
 - 余算： %
 
 ~~~
-var a = 2 + 3 * 4;
+let a = 2 + 3 * 4;
 console.log(a);
-var b = 5 - 6 / 3 + 7;
+let b = 5 - 6 / 3 + 7;
 console.log(b);
-var c = 10 % 3;
+let c = 10 % 3;
 console.log(c);
 ~~~
 
@@ -165,11 +165,11 @@ console.log(c);
 ## 代入演算子
 
 ~~~
-var a = 2;
+let a = 2;
 a = a + 3;
 a += 3; // a = a + 3 の省略形
 
-var b = 10;
+let b = 10;
 b = b * 10;
 b *= 10;    // b = b * 10 と省略形
 ~~~
@@ -182,7 +182,7 @@ b *= 10;    // b = b * 10 と省略形
 デクリメント： `a = a - 1` の部分は `a--` や `--a` とも記述できます。
 
 ~~~
-var a = 1;
+let a = 1;
 a++;    // a = a + 1;
 console.log(a);
 a--;    // a = a - 1;
@@ -196,18 +196,18 @@ console.log(++a);   // 表示する前にインクリメント
 ## 文字列連結演算子
 
 ~~~
-var str = "香川" + "県";
+let str = "香川" + "県";
 console.log(str);
-var loc = str + "高松市";
+let loc = str + "高松市";
 console.log(loc);
-var name = "Tam";
-var age = 17;
-var msg = name + "さんは" + age + "歳"; // 数値は自動で文字列に変換されて結合
+let name = "Tam";
+let age = 17;
+let msg = name + "さんは" + age + "歳"; // 数値は自動で文字列に変換されて結合
 console.log(msg);
 ~~~
 
 ---
-## 比較演算子
+## 比較演算子１
 
 |比較演算子|意味|
 |---|---|
@@ -217,9 +217,20 @@ console.log(msg);
 | >= | 左が右以上のとき true 、それ以外は false |
 | <= | 左が右以下のとき true 、それ以外は false |
 | != | 左右が等しくなければ true 、等しいとき false |
-| === | 左右の「値」と「型」がどちらも一致すれば true 、それ以外は false |
 
 ※注意： `=>` や `=<` といった比較演算子は間違いです。
+
+---
+## 比較演算子２
+
+|比較演算子|意味|
+|---|---|
+| === | 左右の「値」と「型」がどちらも一致すれば true 、それ以外は false |
+| !== | 左右の「値」と「型」どちらかが一致しなければ true 、それ以外は false |
+
+※ `==` や `!=` との違いは、型チェックも行うことです。
+
+思わぬバグを防ぐためにも、できるだけ `===` や `!==` を使うようにしましょう。
 
 ---
 ## 論理演算子
@@ -235,13 +246,13 @@ console.log(msg);
 - NOT「!」：「!」の後の式の論理を反転する
 
 ~~~
-var x = 1;
-var y = 1;
-var result1 = (x == 1) && (y == 2);
+let x = 1;
+let y = 1;
+let result1 = (x == 1) && (y == 2);
 console.log(result1);
-var result2 = (x == 1) || (y == 2);
+let result2 = (x == 1) || (y == 2);
 console.log(result2);
-var result3 = !((x == 1) && (y == 2));
+let result3 = !((x == 1) && (y == 2));
 console.log(result3);
 ~~~
 
@@ -254,9 +265,9 @@ console.log(result3);
 - 添字は定数でも変数でも良い
 
 ~~~
-var students = ["tanaka", "sato", "suzuki"];
+let students = ["tanaka", "sato", "suzuki"];
 console.log(students[0]);
-var index = 2;
+let index = 2;
 console.log(students[index]);
 ~~~
 
@@ -350,7 +361,7 @@ for文, while文 などのループ内で使用。
 break が実行されるとループを脱出
 
 ~~~
-for (var i = 0; i < 100; i++) {
+for (let i = 0; i < 100; i++) {
     console.log(i);
     if (i > 5) {
         break;
@@ -366,7 +377,7 @@ for文, while文 などのループ内で使用。
 continue が実行されると、すぐさま次のループを実行
 
 ~~~
-for (var i = 0; i < 100; i++) {
+for (let i = 0; i < 100; i++) {
     if (i <= 95) {
         continue;
     }
@@ -379,7 +390,7 @@ for (var i = 0; i < 100; i++) {
 
 ~~~
 var list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
-for (var i = 0; i < list.length; i++) {
+for (let i = 0; i < list.length; i++) {
     console.log(i + "番目の素数は" + list[i] + "です。");
     var str = String(list[i]); // 数値型を文字列型に変換
     if (str.indexOf("3") != -1) { // "3" が str に存在しなければ -1 を返す
@@ -421,9 +432,9 @@ for (var i = 0; i < list.length; i++) {
 ---
 ~~~
 const countmax = 100;
-var count = 1;
-var timer = setInterval(function() {
-    var msg = String(count);
+let count = 1;
+let timer = setInterval(function() {
+    let msg = String(count);
     if (count % 3 === 0 ||
         String(count).indexOf("3") != -1) {
         msg = "<font color='red' size=30>" + count + "</font>";
@@ -456,7 +467,7 @@ function 関数名(引数リスト) {
 - 変数には「型情報」と「値」が格納されている
 
 ~~~
-var a;
+let a;
 a = 1;
 console.log(a);
 a = "こんばんは。";
@@ -471,7 +482,7 @@ console.log(a);
 繰り返し for 文の派生系
 
 ~~~
-var obj = {a:1, b:2, c:3};
+let obj = {a:1, b:2, c:3};
 for (var k in obj) {
     console.log(k);
     console.log(obj[k]);
@@ -483,8 +494,8 @@ for (var k in obj) {
 
 ~~~
 try {
-    var a = 5 / 0; // 0 で割っているのでエラーが起こる
-    a *= 5;
+    const a = 5;
+    a *= 5; // const に代入しようとしているので、エラーが起こる。
     console.log(a);
 } catch (err) {
     console.log("エラーが起きました。");
@@ -495,7 +506,7 @@ try {
 ## やってみよう
 
 ~~~
-var nums = [56, 78, 83, 64, 100, 87, 98, 43, 95, 83, 60, 74, 36];
+let nums = [56, 78, 83, 64, 100, 87, 98, 43, 95, 83, 60, 74, 36];
 ~~~
 
 上の数値配列について、以下のプログラムを書いてください。
