--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -79,9 +79,24 @@ let address = "高松市"; // 住所は高松
 ※var と let どちらでも変数を定義できますが、できる限り let を使いましょう。
 
 ---
-## 定数
+## 変数の型
 
-値の変わることのない変数
+- JavaScript は「動的型付け」で「弱い型付け」の言語です。
+
+- 代入する変数に型を指定する必要はありません。
+
+- 型が異なる場合、暗黙の型変換を行うことがあります。
+
+~~~
+let age = 17;   // 変数 age に数値型の 17 を代入
+age = "17";     // 変数 age に文字列型の "17" を代入
+age = age + 1;  // 文字列型の変数 age に数値型の 1 を連結して "171" になる。
+~~~
+
+---
+## const 変数
+
+変更することが出来ない、変更不可の変数
 
 ~~~
 const adult_age = 18;           // 成人年齢は 18歳
@@ -135,13 +150,27 @@ test();
 function test() {
     var a = 1;
     {
-        a = 2;
+        var a = 2;
     }
     console.log(a);
 }
 
 test();
 ~~~
+
+---
+## 変数宣言
+
+- var と let どちらでも変数宣言が可能です。
+
+- let は ES2015(ES6) で新しく追加された記述法です。
+
+- let は再宣言不可で変数の有効な範囲（スコープと言います）も分かりやすく改良されています。
+
+- let の方がコーディングミスを防ぎやすくなっています。
+
+- （前のスライドでも説明していますが、）出来るだけ let を使いましょう。
+
 
 ---
 ## 算術演算子
