--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -383,6 +383,15 @@ for (var i = 0; i < 10; i++) {
 ~~~
 
 ---
+## 練習してみよう！
+
+1. 1～100 までの数字全部を足し合わせた合計を計算してみましょう。
+
+1. 2～100 までの偶数全部を足し合わせた合計を計算してみましょう。
+
+1. 1～100 までの 3 の倍数と 5 の倍数全部を足し合わせた合計を計算してみましょう。
+
+---
 ## break 文
 
 for文, while文 などのループ内で使用。
