--- a/2024/2024-07-25-js-lecture2.md
+++ b/2024/2024-07-25-js-lecture2.md
@@ -391,6 +391,8 @@ for (var i = 0; i < 10; i++) {
 
 1. 1～100 までの 3 の倍数と 5 の倍数全部を足し合わせた合計を計算してみましょう。
 
+※出来るところまでで構いません。
+
 ---
 ## break 文
 
@@ -445,6 +447,8 @@ for (let i = 0; i < list.length; i++) {
 1. １秒に１つずつ、 1 から数字をインクリメントしながら表示する。
 1. ３の倍数のときにだけ「！」を付けて表示する。
 1. ３の倍数のとき、もしくは "3" を含む数字のときだけ「！」を付けて表示する。
+
+※出来るところまでで構いません。
 
 ---
 ## 休憩
@@ -536,3 +540,5 @@ let nums = [56, 78, 83, 64, 100, 87, 98, 43, 95, 83, 60, 74, 36];
 1. 各値を並べられた順番に表示する
 1. 平均を算出する
 1. 値の大きい方から順番に表示する
+
+※出来るところまでで構いません。
