--- a/2024/2024-08-08-js-lecture3.md
+++ b/2024/2024-08-08-js-lecture3.md
@@ -109,3 +109,31 @@ html
 ~~~
 
 ---
+## DOM(Document Of Model)
+
+HTML が木構造で表されているという性質を使い、 JavaScript から HTML を操作できる DOM という便利な概念があります。
+
+- document.body で HTML の BODY タグが取れます。
+- このタグに innerHTML でタグを書き込めば、何でも出来ます。
+- 書き込みにも DOM を使うと、より便利に HTML 構造が書けます。
+
+---
+## DOM サンプル
+
+以下の JavaScript で、 IMG タグの src 属性のみを書き換えることが出来ます。
+
+~~~sample0303.html
+<html>
+<head>
+    <script type="text/javascript" src="sample0303.js"></script>
+</head>
+<body>
+    <img id="dog" src="https://x.gd/9Uow0"></img>
+</body>
+</html>
+~~~
+
+~~~sample0303.js
+const element = document.getElementById('dog');
+element.setAttribute('src', 'https://x.gd/LLx5A');
+~~~
