--- a/2024/2024-08-08-js-lecture3.md
+++ b/2024/2024-08-08-js-lecture3.md
@@ -85,7 +85,7 @@ element.innerText = "Good Morning";
 ---
 ## HTML の挿入
 
-以下のようにすると、 HTML タグも書き換えることが出来ます。
+以下のようにすると、 HTML タグも差し込むことが出来ます。
 
 ~~~sample0302.js
 const element = document.getElementById('hello');
