--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -14,3 +14,103 @@ template: invert
 <!-- footer: JavaScript 入門講座 第４回 -->
 
 ---
+## おさらい（HTML）
+
+~~~sample0000.html
+<html>
+<head>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
+~~~
+
+---
+## JavaScript から HTML の書き換え（準備）
+
+- HTML の書き換えたいタグに id="hello" を書き込みます。
+
+~~~sample0301.html
+<html>
+<body>
+    <h1 id="hello">Hello World</h1>
+</body>
+    <script type="text/javascript" src="sample0301.js"></script>
+</html>
+~~~
+
+---
+## JavaScript から HTML の書き換え
+
+以下の JavaScript により、 "Hello World" の文字が "Good Morning" に書き換わります。
+
+~~~sample0301.js
+const element = document.getElementById('hello');
+element.innerText = "Good Morning";
+~~~
+
+---
+## 練習
+
+1. SetTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
+1. 余力があれば、 5秒ごとに "Hello World" と "Good Morning" の表示が入れ替わるようにしてみましょう。
+
+---
+## HTML の挿入
+
+以下のようにすると、 HTML タグも差し込むことが出来ます。
+
+~~~sample0302.js
+const element = document.getElementById('hello');
+element.innerHTML = "<FONT COLOR="red">Good Morning</FONT>";
+~~~
+
+- タグを文字列で書き換えるよりも効率の良い方法があります。
+
+---
+## 木構造
+
+- 根から葉へと木が先端に行くまでの経路と似ているので、以下のようなデーター構造を「木構造」と言います。
+- HTML は木構造。
+
+~~~
+html
+├ head
+└ body
+　　└ h1
+　　　　└ "Hello World"
+~~~
+
+---
+## DOM(Document Of Model)
+
+HTML が木構造で表されているという性質を使い、 JavaScript から HTML を操作できる DOM という便利な概念があります。
+
+- document.body で HTML の BODY タグが取れます。
+- このタグに innerHTML でタグを書き込めば、何でも出来ます。
+- 書き込みにも DOM を使うと、より便利に HTML 構造が書けます。
+
+---
+## DOM サンプル
+
+以下の JavaScript で、 IMG タグの src 属性のみを書き換えることが出来ます。
+
+~~~sample0303.html
+<html>
+<head>
+    <script type="text/javascript" src="sample0303.js"></script>
+</head>
+<body>
+    <img id="dog" src="https://x.gd/9Uow0"></img>
+</body>
+</html>
+~~~
+
+~~~sample0303.js
+const element = document.getElementById('dog');
+element.setAttribute('src', 'https://x.gd/LLx5A');
+~~~
+
+---
+## 外部ファイル
