--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -14,38 +14,27 @@ template: invert
 <!-- footer: JavaScript 入門講座 第４回 -->
 
 ---
-## おさらい（HTML）
-
-~~~sample0000.html
-<html>
-<head>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
-</html>
-~~~
-
----
 ## JavaScript から HTML の書き換え（準備）
 
 - HTML の書き換えたいタグに id="hello" を書き込みます。
 
-~~~sample0301.html
+~~~sample0401.html
 <html>
 <body>
     <h1 id="hello">Hello World</h1>
 </body>
-    <script type="text/javascript" src="sample0301.js"></script>
+    <script type="text/javascript" src="sample0401.js"></script>
 </html>
 ~~~
+
+※第３回の HTML と、 <script> タグの位置を変えてあります。
 
 ---
 ## JavaScript から HTML の書き換え
 
 以下の JavaScript により、 "Hello World" の文字が "Good Morning" に書き換わります。
 
-~~~sample0301.js
+~~~sample0401.js
 const element = document.getElementById('hello');
 element.innerText = "Good Morning";
 ~~~
@@ -61,7 +50,7 @@ element.innerText = "Good Morning";
 
 以下のようにすると、 HTML タグも差し込むことが出来ます。
 
-~~~sample0302.js
+~~~sample0402.js
 const element = document.getElementById('hello');
 element.innerHTML = "<FONT COLOR="red">Good Morning</FONT>";
 ~~~
@@ -96,18 +85,16 @@ HTML が木構造で表されているという性質を使い、 JavaScript か
 
 以下の JavaScript で、 IMG タグの src 属性のみを書き換えることが出来ます。
 
-~~~sample0303.html
+~~~sample0403.html
 <html>
-<head>
-    <script type="text/javascript" src="sample0303.js"></script>
-</head>
 <body>
     <img id="dog" src="https://x.gd/9Uow0"></img>
 </body>
+<script type="text/javascript" src="sample0403.js"></script>
 </html>
 ~~~
 
-~~~sample0303.js
+~~~sample0403.js
 const element = document.getElementById('dog');
 element.setAttribute('src', 'https://x.gd/LLx5A');
 ~~~
