--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -27,7 +27,7 @@ template: invert
 </html>
 ~~~
 
-※第３回の HTML と、 <script> タグの位置を変えてあります。
+※第３回の HTML と、 `<script>` タグの位置を変えてあります。
 
 ---
 ## JavaScript から HTML の書き換え
