--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -52,7 +52,7 @@ element.innerText = "Good Morning";
 
 ~~~sample0402.js
 const element = document.getElementById('hello');
-element.innerHTML = "<FONT COLOR="red">Good Morning</FONT>";
+element.innerHTML = '<FONT COLOR="red">Good Morning</FONT>';
 ~~~
 
 - タグを文字列で書き換えるよりも効率の良い方法があります。
