--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -42,8 +42,21 @@ element.innerText = "Good Morning";
 ---
 ## 練習
 
-1. SetTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
+1. setTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
 1. 余力があれば、 5秒ごとに "Hello World" と "Good Morning" の表示が入れ替わるようにしてみましょう。
+
+setTimeout 関数の使い方：
+
+ほぼ setInterval と同じです。ただし、関数は１回しか呼ばれません。
+
+~~~
+function display() {
+    const element = document.getElementById('hello');
+    element.innerText = "Good Morning";
+}
+
+setTimeout(display, 1000);
+~~~
 
 ---
 ## HTML の挿入
@@ -52,7 +65,7 @@ element.innerText = "Good Morning";
 
 ~~~sample0402.js
 const element = document.getElementById('hello');
-element.innerHTML = '<FONT COLOR="red">Good Morning</FONT>';
+element.innerHTML = '<FONT COLOR="#FF0000">Good Morning</FONT>';
 ~~~
 
 - タグを文字列で書き換えるよりも効率の良い方法があります。
@@ -60,7 +73,7 @@ element.innerHTML = '<FONT COLOR="red">Good Morning</FONT>';
 ---
 ## 木構造
 
-- 根から葉へと木が先端に行くまでの経路と似ているので、以下のようなデーター構造を「木構造」と言います。
+- 根から葉へと木が先端に行くまでの経路と似ているので、以下のようなデータ構造を「木構造」と言います。
 - HTML は木構造。
 
 ~~~
@@ -78,6 +91,11 @@ HTML が木構造で表されているという性質を使い、 JavaScript か
 
 - document.body で HTML の BODY タグが取れます。
 - このタグに innerHTML でタグを書き込めば、何でも出来ます。
+
+~~~
+document.body.innerHTML = '<h1>Good Evening</h1>';
+~~~
+
 - 書き込みにも DOM を使うと、より便利に HTML 構造が書けます。
 
 ---
