--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -16,7 +16,7 @@ template: invert
 ---
 ## JavaScript から HTML の書き換え（準備）
 
-- HTML の書き換えたいタグに id="hello" を書き込みます。
+- HTML の書き換えたいタグに `id="hello"` を書き込みます。
 
 ~~~sample0401.html
 <html>
