--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -68,7 +68,7 @@ const element = document.getElementById('hello');
 element.innerHTML = '<FONT COLOR="#FF0000">Good Morning</FONT>';
 ~~~
 
-- タグを文字列で書き換えるよりも効率の良い方法があります。
+※タグを文字列で書き換えるよりも効率の良い方法があります。
 
 ---
 ## 木構造
@@ -116,6 +116,40 @@ document.body.innerHTML = '<h1>Good Evening</h1>';
 const element = document.getElementById('dog');
 element.setAttribute('src', 'https://x.gd/LLx5A');
 ~~~
+
+---
+## ファイルの中身
+
+~~~
+00000000  3c 68 74 6d 6c 3e 0a 0a  3c 62 6f 64 79 3e 0a 20  |<html>..<body>. |
+00000010  20 20 20 3c 69 6d 67 20  69 64 3d 22 64 6f 67 22  |   <img id="dog"|
+00000020  20 73 72 63 3d 22 68 74  74 70 73 3a 2f 2f 78 2e  | src="https://x.|
+00000030  67 64 2f 39 55 6f 77 30  22 3e 3c 2f 69 6d 67 3e  |gd/9Uow0"></img>|
+00000040  0a 3c 2f 62 6f 64 79 3e  0a 3c 73 63 72 69 70 74  |.</body>.<script|
+00000050  20 74 79 70 65 3d 22 74  65 78 74 2f 6a 61 76 61  | type="text/java|
+00000060  73 63 72 69 70 74 22 20  73 72 63 3d 22 73 61 6d  |script" src="sam|
+00000070  70 6c 65 30 34 30 31 2e  6a 73 22 3e 3c 2f 73 63  |ple0401.js"></sc|
+00000080  72 69 70 74 3e 0a 0a 3c  2f 68 74 6d 6c 3e        |ript>..</html>|
+~~~
+
+---
+## BOM(Byte Order Mark)
+
+- （だいぶ統一されてきたが）漢字の表現方法にはいくつか種類がある。
+- どの表現方法で漢字などが表現されているかを示すためのマークを BOM と言う。
+
+例：
+
+~~~
+UTF-8		    0xEF 0xBB 0xBF
+UTF-16  BE  	0xFE 0xFF
+        LE  	0xFF 0xFE
+UTF-32	BE  	0x00 0x00 0xFE 0xFF
+        LE  	0xFF 0xFE 0x00 0x00
+~~~
+
+- 付けても付けなくても構わないが、付けたほうが文字コードがはっきり分かる。
+- 付けてないと読めないソフト、付けてると読めないソフトなどがあるので、読み込ませたいソフトに合わせてコードを書く必要がある。
 
 ---
 ## 外部ファイル
