--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -118,38 +118,160 @@ element.setAttribute('src', 'https://x.gd/LLx5A');
 ~~~
 
 ---
-## ファイルの中身
+## やってみよう！(DOM)
 
 ~~~
-00000000  3c 68 74 6d 6c 3e 0a 0a  3c 62 6f 64 79 3e 0a 20  |<html>..<body>. |
-00000010  20 20 20 3c 69 6d 67 20  69 64 3d 22 64 6f 67 22  |   <img id="dog"|
-00000020  20 73 72 63 3d 22 68 74  74 70 73 3a 2f 2f 78 2e  | src="https://x.|
-00000030  67 64 2f 39 55 6f 77 30  22 3e 3c 2f 69 6d 67 3e  |gd/9Uow0"></img>|
-00000040  0a 3c 2f 62 6f 64 79 3e  0a 3c 73 63 72 69 70 74  |.</body>.<script|
-00000050  20 74 79 70 65 3d 22 74  65 78 74 2f 6a 61 76 61  | type="text/java|
-00000060  73 63 72 69 70 74 22 20  73 72 63 3d 22 73 61 6d  |script" src="sam|
-00000070  70 6c 65 30 34 30 31 2e  6a 73 22 3e 3c 2f 73 63  |ple0401.js"></sc|
-00000080  72 69 70 74 3e 0a 0a 3c  2f 68 74 6d 6c 3e        |ript>..</html>|
+<html>
+    <body>
+        <div id="myid">Hello!</div>
+    </body>
+    <script type="text/javascript">
+        var element = document.getElementById("myid");
+        console.log(element.innerText);
+        element.innerHTML = '<span style="color:#ff0000;">Good Evening!</span>';
+    </script>
+</html>
 ~~~
 
 ---
-## BOM(Byte Order Mark)
+## BOM(Browser Object Model)
 
-- （だいぶ統一されてきたが）漢字の表現方法にはいくつか種類がある。
-- どの表現方法で漢字などが表現されているかを示すためのマークを BOM と言う。
-
-例：
-
-~~~
-UTF-8		    0xEF 0xBB 0xBF
-UTF-16  BE  	0xFE 0xFF
-        LE  	0xFF 0xFE
-UTF-32	BE  	0x00 0x00 0xFE 0xFF
-        LE  	0xFF 0xFE 0x00 0x00
-~~~
-
-- 付けても付けなくても構わないが、付けたほうが文字コードがはっきり分かる。
-- 付けてないと読めないソフト、付けてると読めないソフトなどがあるので、読み込ませたいソフトに合わせてコードを書く必要がある。
+- ブラウザの情報に関するオブジェクトモデル
+- ブラウザの情報を取得、操作する枠組み
 
 ---
-## 外部ファイル
+## やってみよう１！(BOM)
+
+~~~
+<html>
+    <body>
+        <div>Hello!</div>
+    </body>
+    <script type="text/javascript">
+        console.log(location.href);
+    </script>
+</html>
+~~~
+
+---
+## やってみよう２！(BOM)
+
+~~~
+<html>
+    <body>
+        <div>Hello!</div>
+    </body>
+    <script type="text/javascript">
+        location.href = "http://www.google.co.jp/";
+    </script>
+</html>
+~~~
+
+---
+## イベント１
+
+- あるイベントが発生したときに、 JavaScript プログラムを起動させることが出来る。
+- これをイベントの登録などと表現し、プログラムが起動することを発火などと表現する。
+
+~~~
+<input type="button" value="button" id="myid2" onclick="buttonClick()">
+
+<script type="text/javascript">
+    function buttonClick(){
+        alert('Click');
+    }
+</script>
+~~~
+
+---
+## イベント２
+
+HTML と JavaScript ファイルは、別ファイルに分けておきたい。
+
+~~~
+function buttonClick(){
+    alert('Click');
+}
+
+let button = document.getElementById('myid2');
+button.addEventListener('click', buttonClick);
+~~~
+
+---
+## ファイルへの保存
+
+~~~
+<a href="#" id="weather" download="weather.json">JSON ダウンロード</a>
+~~~
+
+~~~
+document.getElementById('weather').addEventListener('click', (event) => {
+  // 保存する文字列の Blob オブジェクトを作成
+  const blob = new Blob(["<html><body><h1>hello</h1></body></html>"],
+    {type: 'text/html'});
+  // a 要素の href 属性に Object URL を セット
+  event.currentTarget.href = window.URL.createObjectURL(blob);
+});
+~~~
+
+---
+## ファイルの読み込み
+
+今書き込んだ JSON フィアルを読み出してみましょう。
+ファイルの読み書きには通常 File API を使用します。
+
+~~~
+<input id="myfile" type="file">
+~~~
+
+~~~
+const f = document.getElementById('myfile');
+f.addEventListener('change', function(evt) {
+    const input = evt.target;
+    const file = input.files[0];
+    const reader = new FileReader();
+    reader.onload = () => {
+        // 読み出し結果の表示
+        console.log(reader.result);
+    };
+    reader.readAsText(file); // 読み込み開始
+});
+~~~
+
+---
+## CSV ファイル
+
+- Excel のような表計算のような構造をもったデータ
+- １行で一つのデータの塊を表し、各データは記号「`,`」で区切ります。
+
+|タイトル|著者|発行年|
+|---|---|---|
+|博士の愛した数式|小川 洋子|2003|
+|円周率πの不思議|堀場 芳数|1989|
+|超幾何関数入門|木村 弘信|2007|
+
+~~~
+タイトル,著者,発行年
+博士の愛した数式,小川 洋子,2003
+円周率πの不思議,堀場 芳数,1989
+超幾何関数入門,木村 弘信,2007
+~~~
+
+---
+## CSV ファイルの読み込み
+
+~~~
+// 配列を定義
+let csvArray = [];
+ 
+// 改行ごとに配列化
+let lines = body.split(/\r\n|\n/);
+ 
+// 1行ごとに処理
+for (let i = 0; i < lines.length; ++i) {
+    let cells = lines[i].split(",");
+    csvArray.push(cells);
+}
+
+console.log(csvArray);
+~~~
