--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -126,7 +126,7 @@ element.setAttribute('src', 'https://x.gd/LLx5A');
         <div id="myid">Hello!</div>
     </body>
     <script type="text/javascript">
-        var element = document.getElementById("myid");
+        const element = document.getElementById("myid");
         console.log(element.innerText);
         element.innerHTML = '<span style="color:#ff0000;">Good Evening!</span>';
     </script>
@@ -193,7 +193,7 @@ function buttonClick(){
     alert('Click');
 }
 
-let button = document.getElementById('myid2');
+const button = document.getElementById('myid2');
 button.addEventListener('click', buttonClick);
 ~~~
 
@@ -262,10 +262,10 @@ f.addEventListener('change', function(evt) {
 
 ~~~
 // 配列を定義
-let csvArray = [];
+const csvArray = [];
  
 // 改行ごとに配列化
-let lines = body.split(/\r\n|\n/);
+const lines = body.split(/\r\n|\n/);
  
 // 1行ごとに処理
 for (let i = 0; i < lines.length; ++i) {
