--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -170,8 +170,8 @@ element.setAttribute('src', 'https://x.gd/LLx5A');
 ---
 ## イベント１
 
-- あるイベントが発生したときに、 JavaScript プログラムを起動させることが出来る。
-- これをイベントの登録などと表現し、プログラムが起動することを発火などと表現する。
+- あるイベントが発生したときに、 JavaScript プログラムを起動させることが出来ます。
+- これをイベントの登録などと表現し、プログラムが起動することを発火などと表現します。
 
 ~~~
 <input type="button" value="button" id="myid2" onclick="buttonClick()">
