--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -275,3 +275,5 @@ for (let i = 0; i < lines.length; ++i) {
 
 console.log(csvArray);
 ~~~
+
+※画面表示などで使用する制御文字エスケープシーケンスについては、 JavaScript 本格入門 P73 を参照
