--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -201,7 +201,7 @@ button.addEventListener('click', buttonClick);
 ## ファイルへの保存
 
 ~~~
-<a href="#" id="weather" download="weather.json">JSON ダウンロード</a>
+<a href="#" id="weather" download="weather.json">ダウンロード</a>
 ~~~
 
 ~~~
@@ -217,7 +217,7 @@ document.getElementById('weather').addEventListener('click', (event) => {
 ---
 ## ファイルの読み込み
 
-今書き込んだ JSON フィアルを読み出してみましょう。
+今ダウンロードしたファイルを読み出してみましょう。
 ファイルの読み書きには通常 File API を使用します。
 
 ~~~
