--- a/2024/2024-08-22-js-lecture4.md
+++ b/2024/2024-08-22-js-lecture4.md
@@ -201,7 +201,7 @@ button.addEventListener('click', buttonClick);
 ## ファイルへの保存
 
 ~~~
-<a href="#" id="weather" download="weather.json">ダウンロード</a>
+<a href="#" id="weather" download="sample.html">ダウンロード</a>
 ~~~
 
 ~~~
