--- a/2024/2024-09-05-js-lecture5.md
+++ b/2024/2024-09-05-js-lecture5.md
@@ -11,6 +11,91 @@ $theme: gaia
 template: invert
 -->
 
-<!-- footer: JavaScript 入門講座 第４回 -->
+<!-- footer: JavaScript 入門講座 第５回 -->
 
 ---
+## BOM(Browser Object Model)
+
+- ブラウザの情報に関するオブジェクトモデル
+- ブラウザの情報を取得、操作する枠組み
+
+---
+## やってみよう１！(BOM)
+
+~~~
+<html>
+    <body>
+        <div>Hello!</div>
+    </body>
+    <script type="text/javascript">
+        console.log(location.href);
+    </script>
+</html>
+~~~
+
+---
+## やってみよう２！(BOM)
+
+５秒後に別のページへジャンプ。
+
+~~~
+<html>
+    <body>
+        <div>Hello!</div>
+    </body>
+    <script type="text/javascript">
+        function jump() {
+            location.href = "http://www.google.co.jp/";
+        }
+
+        setTimeout(jump, 5000);
+    </script>
+</html>
+~~~
+
+---
+## イベント１
+
+- あるイベントが発生したときに、 JavaScript プログラムを起動させることが出来ます。
+- これをイベントの登録などと表現し、プログラムが起動することを発火などと表現します。
+
+~~~
+<html>
+<body>
+<input type="button" value="button" onclick="buttonClick()">
+</body>
+<script type="text/javascript">
+    function buttonClick(){
+        alert('Click');
+    }
+</script>
+</html>
+~~~
+
+---
+## イベント２
+
+HTML と JavaScript ファイルは、別ファイルに分けておきたい。
+
+~~~
+<html>
+<body>
+<input type="button" value="button" id="myid">
+</body>
+</html>
+~~~
+
+~~~
+function buttonClick(){
+    alert('Click');
+}
+
+const button = document.getElementById('myid');
+button.addEventListener('click', buttonClick);
+~~~
+
+こうすることで、 HTML作成者（デザイナーさん）と JavaScript作成者（プログラマー）で分担作業がしやすくなります。
+
+---
+## 課題発表
+
