--- a/2024/2024-09-05-js-lecture5.md
+++ b/2024/2024-09-05-js-lecture5.md
@@ -97,5 +97,62 @@ button.addEventListener('click', buttonClick);
 こうすることで、 HTML作成者（デザイナーさん）と JavaScript作成者（プログラマー）で分担作業がしやすくなります。
 
 ---
+## 課題
+
+1. 「Hello World」が表示される画面を作り、ボタンを押すと、その文字が「Good Evening」に変わる画面を作ってみましょう。
+2. 余力があれば、ボタンを押すごとに、「Hello World」と「Good Evening」が交互に入れ替わるようにしてみましょう。
+
+---
 ## 課題発表
 
+1. 下記のような画面を作ってください。
+1. 各「Add」ボタンを押すと、押した回数分金額を加算し、その値を Total Price に表示してください。
+
+![](./2024-09-05-js-lecture5-sample0501.PNG)
+
+---
+## ヒント１
+
+まずは HTML を作成しましょう。
+
+~~~
+<p><span style="color: #ff0000;"><strong>購入する品をクリックしてください</strong></span></p>
+<h3>ドライバー 1,000円<button id="btn1">Add</button></h3>
+<br />
+<h3>Total Price</h3>
+<h3 id="price">0円</h3>
+~~~
+
+---
+## ヒント２
+
+ボタンを押したら合計金額を計算して見ましょう。
+
+~~~
+let price = 0;
+
+function btn1Click() {
+    price += 1000;
+    console.log(price);
+}
+
+const elem1 = document.getElementById('btn1');
+elem1.addEventListener('click', btn1Click);
+~~~
+
+---
+## ヒント３
+
+計算できたら、それを画面上に表示してみましょう。
+
+~~~
+function display() {
+    const elemPrice = document.getElementById('price');
+    elemPrice.innerText = price + '円';
+}
+~~~
+
+---
+## ヒント４
+
+１品目で計算できたら、品目数を増やして計算できるようにしましょう。
