--- a/2024/2024-09-05-js-lecture5.md
+++ b/2024/2024-09-05-js-lecture5.md
@@ -156,3 +156,13 @@ function display() {
 ## ヒント４
 
 １品目で計算できたら、品目数を増やして計算できるようにしましょう。
+
+---
+## 発展課題
+
+余力があれば、以下のことにも挑戦してみましょう。
+
+1. 消費税を一律 10% で計算する。
+1. 品物を減らせるようにする。
+1. 消費税率の違う物品を混ぜて、消費税を計算する。
+1. カートに入っている以上には減らせないようにする。
