--- a/2025/2025-01-09-js-lecture1.md
+++ b/2025/2025-01-09-js-lecture1.md
@@ -235,35 +235,31 @@ document.writeln(h + "時" + m + "分" + s + "秒");
 ~~~
 
 ---
-## 繰り返し文
+## 計算してみましょう
 
-1 から 10 までの数の和を求めましょう。
+100円の商品の消費税（10%）込の金額を計算してみましょう。
+
+JavaScript では、掛け算の記号として「*（アスタリスク）」を使います。
 
 ~~~sample0050.js
-let result = 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10;
-document.writeln(result);
-~~~
-
-~~~sample0051.js
-let result = 0;
-for (let i = 1; i <= 10; i++) {
-    result = result + i;
-}
+let result = 100 * 1.10;
 document.writeln(result);
 ~~~
 
 ---
-## 公式を使う
+## 計算をしてみましょう２
+
+200円の商品の消費税（10%）込の金額を計算してみましょう。
 
 ~~~sample0060.js
-let reuslt = 10 * 11 / 2;
+let result = 200 * 1.10;
 document.writeln(result);
 ~~~
 
-次に、 1 から 20 までの数の和を求めてください。
+次に、 300円の商品の消費税（10%）込の金額を計算してみましょう。
 
 ~~~sample0061.js
-let reuslt = 20 * 21 / 2;
+let result = 300 * 1.10;
 document.writeln(result);
 ~~~
 
@@ -274,16 +270,16 @@ document.writeln(result);
 
 ~~~sample0070.js
 // ここでは関数を定義するだけ。
-function sum(num) {
-    let result = num * (num + 1) / 2;
+function price(value) {
+    let result = value * 1.10;
     return result;
 }
 
 // 以下で初めて関数が実行される。
-let result = sum(10);
-document.writeln(result);
+let result1 = price(100);
+document.writeln(result1);
 
 // 以下で再び関数が実行される。
-result = sum(20);
-document.writeln(result);
+let result2 = price(200);
+document.writeln(result2);
 ~~~
