--- a/2025/2025-01-09-js-lecture1.md
+++ b/2025/2025-01-09-js-lecture1.md
@@ -25,49 +25,13 @@ template: invert
 - すべてを理解するのは到底不可能なので、各言語に特化した複数の人がチームになってシステムを組み上げます。
 
 ---
-## 言語の例
+## JavaScript の特徴
 
-- Java
+- JavaScript を解釈し、実行できるブラウザが多い。
 
-Android などの開発言語としてもてはやされている。出た当初はクライアント側での動作がメインだったが、サーバー側で動くプログラムも結構出てきている。
+- ブラウザ上で動くので、ブラウザで表示している HTML などを書き換えることが出来る。
 
-- Ruby
-
-日本人が開発した言語。主にサーバーサイドで DB を扱うプログラムに長けている。
-
-- C言語
-
-歴史的に古い言語だが, ハードウェアに近いプログラムがほぼこの言語で書かれている。
-
----
-## LAMP 環境
-
-以下の環境でシステムを構築するのがデファクト・スタンダードになっている。
-
-- Linux
-
-OS に Linux を採用する。
-
-- Apache
-
-古くからある Web サーバであり, 使いやすく堅牢な性能を誇る。
-
-- MySQL
-
-オープンソースで開発されている DB サーバ。
-
-- PHP
-
-バックエンド（サーバー側）のプログラムとしてプラットフォームやライブラリが整備されており、多くの開発者にとって馴染みのある言語となっている。
-
----
-## LAMP 構造
-
-![](../2024/2024-07-11-LAMP.png)
-
----
-## JavaScript とは？
-
+- ブラウザ上の挙動を（セキュリティ的に）安全に模倣できる。
 
 ---
 ## 練習
@@ -86,7 +50,7 @@ OS に Linux を採用する。
 </html>
 ~~~
 
-※「全角」（日本語入力モード）は使わないでください。
+※「全角（日本語入力モード）」は使わないでください。
 
 ---
 ## HTML の構造
