--- a/2025/2025-01-09-js-lecture1.md
+++ b/2025/2025-01-09-js-lecture1.md
@@ -119,6 +119,20 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
 ~~~
 
 ---
+## 変数
+
+- 値（数値や文字列等）を入れる入れ物
+- 自由に名前（変数名）を付けることが出来る
+
+~~~
+var name = "Tam";   // 名前は Tam
+var age = 17;       // 年齢は 17歳
+let address = "高松市"; // 住所は高松
+~~~
+
+※var と let どちらでも変数を定義できますが、できる限り let を使いましょう。
+
+---
 ## エラーが出たとき
 
 ブラウザだと、デバッグコンソールでエラーが表示できます。
@@ -130,9 +144,9 @@ JavaScript はブラウザでも動かせます。次のページにサンプル
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript">
-        // 定数値に代入して、エラーを無理やり出す。
-        const tmp = 0;
-        tmp = 10;
+        // 定義を２回行って、エラーを無理やり出す。
+        let tmp = 10;
+        let tmp = 20;
     </script>
 </head>
 <body>
