--- a/2025/2025-01-23-js-lecture2.md
+++ b/2025/2025-01-23-js-lecture2.md
@@ -65,20 +65,6 @@ setInterval(display, 1000); // 1000ミリ秒毎に関数を実行
 ~~~
 
 ---
-## 変数
-
-- 値（数値や文字列等）を入れる入れ物
-- 自由に名前（変数名）を付けることが出来る
-
-~~~
-var name = "Tam";   // 名前は Tam
-var age = 17;       // 年齢は 17歳
-let address = "高松市"; // 住所は高松
-~~~
-
-※var と let どちらでも変数を定義できますが、できる限り let を使いましょう。
-
----
 ## 変数の型
 
 - JavaScript は「動的型付け」で「弱い型付け」の言語です。
@@ -122,6 +108,8 @@ test();
 console.log(a);
 ~~~
 
+※講師画面で実行する前に、何が表示されるかを考えてみましょう。
+
 ---
 ## スコープ２
 
@@ -141,6 +129,8 @@ function test() {
 test();
 ~~~
 
+※講師画面で実行する前に、何が表示されるかを考えてみましょう。
+
 ---
 ## スコープ３
 
@@ -157,6 +147,8 @@ function test() {
 
 test();
 ~~~
+
+※講師画面で実行する前に、何が表示されるかを考えてみましょう。
 
 ---
 ## 変数宣言
