--- a/2025/2025-01-23-js-lecture2.md
+++ b/2025/2025-01-23-js-lecture2.md
@@ -18,18 +18,18 @@ template: invert
 
 ~~~sample0070.js
 // ここでは関数を定義するだけ。
-function sum(num) {
-    let result = num * (num + 1) / 2;
+function price(value) {
+    let result = value * 1.10;
     return result;
 }
 
 // 以下で初めて関数が実行される。
-let result = sum(10);
-document.writeln(result);
+let result1 = price(100);
+document.writeln(result1);
 
 // 以下で再び関数が実行される。
-result = sum(20);
-document.writeln(result);
+let result2 = price(200);
+document.writeln(result2);
 ~~~
 
 ---
