--- a/2025/2025-01-23-js-lecture2.md
+++ b/2025/2025-01-23-js-lecture2.md
@@ -82,7 +82,7 @@ age = age + 1;  // 文字列型の変数 age に数値型の 1 を連結して "
 ---
 ## const 変数
 
-変更することが出来ない、変更不可の変数
+変更することが出来ない、再代入不可の変数
 
 ~~~
 const adult_age = 18;           // 成人年齢は 18歳
