--- a/2025/2025-02-06-js-lecture3.md
+++ b/2025/2025-02-06-js-lecture3.md
@@ -82,6 +82,8 @@ element.innerText = "Good Morning";
 1. SetTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
 1. 余力があれば、 5秒ごとに "Hello World" と "Good Morning" の表示が入れ替わるようにしてみましょう。
 
+２のヒント： SetInterval を使ってみましょう。
+
 ---
 ## HTML の挿入
 
@@ -89,51 +91,5 @@ element.innerText = "Good Morning";
 
 ~~~sample0302.js
 const element = document.getElementById('hello');
-element.innerHTML = "<FONT COLOR="red">Good Morning</FONT>";
-~~~
-
-- タグを文字列で書き換えるよりも効率の良い方法があります。
-
----
-## 木構造
-
-- 根から葉へと木が先端に行くまでの経路と似ているので、以下のようなデーター構造を「木構造」と言います。
-- HTML は木構造。
-
-~~~
-html
-├ head
-└ body
-　　└ h1
-　　　　└ "Hello World"
-~~~
-
----
-## DOM(Document Of Model)
-
-HTML が木構造で表されているという性質を使い、 JavaScript から HTML を操作できる DOM という便利な概念があります。
-
-- document.body で HTML の BODY タグが取れます。
-- このタグに innerHTML でタグを書き込めば、何でも出来ます。
-- 書き込みにも DOM を使うと、より便利に HTML 構造が書けます。
-
----
-## DOM サンプル
-
-以下の JavaScript で、 IMG タグの src 属性のみを書き換えることが出来ます。
-
-~~~sample0303.html
-<html>
-<head>
-</head>
-<body>
-    <img id="dog" src="https://x.gd/9Uow0"></img>
-</body>
-<script type="text/javascript" src="sample0303.js"></script>
-</html>
-~~~
-
-~~~sample0303.js
-const element = document.getElementById('dog');
-element.setAttribute('src', 'https://x.gd/LLx5A');
+element.innerHTML = '<FONT COLOR="red">Good Morning</FONT>';
 ~~~
