--- a/2025/2025-02-20-js-lecture4.md
+++ b/2025/2025-02-20-js-lecture4.md
@@ -14,30 +14,6 @@ template: invert
 <!-- footer: JavaScript 入門講座 第４回 -->
 
 ---
-## JavaScript から HTML の書き換え（準備）
-
-- HTML の書き換えたいタグに `id="hello"` を書き込みます。
-
-~~~sample0401.html
-<html>
-<body>
-    <h1 id="hello">Hello World</h1>
-</body>
-    <script type="text/javascript" src="sample0401.js"></script>
-</html>
-~~~
-
----
-## JavaScript から HTML の書き換え
-
-以下の JavaScript により、 "Hello World" の文字が "Good Morning" に書き換わります。
-
-~~~sample0401.js
-const element = document.getElementById('hello');
-element.innerText = "Good Morning";
-~~~
-
----
 ## 練習
 
 1. setTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
@@ -57,88 +33,64 @@ setTimeout(display, 1000);
 ~~~
 
 ---
-## HTML の挿入
+## 配列
 
-以下のようにすると、 HTML タグも差し込むことが出来ます。
+たくさんの変数を組として扱う仕組み
 
-~~~sample0402.js
-const element = document.getElementById('hello');
-element.innerHTML = '<FONT COLOR="#FF0000">Good Morning</FONT>';
+| | | | | | | | | |
+| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| 添字 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+| 中身 | 3 | 1 | 4 | 1 | 5 | 9 | 2 | 6 |
+| | | | | | | | | |
+
+作り方：
 ~~~
-
-※タグを文字列で書き換えるよりも効率の良い方法があります。
-
----
-## 木構造
-
-- 根から葉へと木が先端に行くまでの経路と似ているので、以下のようなデータ構造を「木構造」と言います。
-- HTML は木構造。
-
-~~~
-html
-├ head
-└ body
-　　└ h1
-　　　　└ "Hello World"
+const pi = [3, 1, 4, 1, 5, 9, 2, 6];
+console.log(pi[2]);
 ~~~
 
 ---
-## DOM(Document Of Model)
-
-HTML が木構造で表されているという性質を使い、 JavaScript から HTML を操作できる DOM という便利な概念があります。
-
-- document.body で HTML の BODY タグが取れます。
-- このタグに innerHTML でタグを書き込めば、何でも出来ます。
+## 配列と繰り返し
 
 ~~~
-document.body.innerHTML = '<h1>Good Evening</h1>';
-~~~
-
-- 書き込みにも DOM を使うと、より便利に HTML 構造が書けます。
-
----
-## DOM サンプル
-
-以下の JavaScript で、 IMG タグの src 属性のみを書き換えることが出来ます。
-
-~~~sample0403.html
-<html>
-<body>
-    <img id="dog" src="https://x.gd/9Uow0"></img>
-</body>
-<script type="text/javascript" src="sample0403.js"></script>
-</html>
-~~~
-
-~~~sample0403.js
-const element = document.getElementById('dog');
-element.setAttribute('src', 'https://x.gd/LLx5A');
+const list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
+for (let i = 0; i < list.length; i++) {
+    console.log("配列の" + i + "番目は" + list[i] + "です。");
+}
 ~~~
 
 ---
-## やってみよう！(DOM)
+## 配列への代入
+
+配列の中身を変更したくなったら、直接代入も出来ます。
 
 ~~~
-<html>
-    <body>
-        <div id="myid">Hello!</div>
-    </body>
-    <script type="text/javascript">
-        const element = document.getElementById("myid");
-        console.log(element.innerText);
-        element.innerHTML = '<span style="color:#ff0000;">Good Evening!</span>';
-    </script>
-</html>
+let list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
+list[2] = 4;
+for (let i = 0; i < list.length; i++) {
+    console.log("配列の" + i + "番目は" + list[i] + "です。");
+}
 ~~~
 
 ---
-## BOM(Browser Object Model)
+## やってみよう
 
-- ブラウザの情報に関するオブジェクトモデル
-- ブラウザの情報を取得、操作する枠組み
+~~~
+let list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
+~~~
+
+上の数値配列について、以下のプログラムを書いてください。
+
+1. 各値を並べられた順番に表示する
+1. 合計値を算出する
+1. 平均値を算出する
+
+※出来るところまでで構いません。
 
 ---
-## やってみよう１！(BOM)
+## やってみよう１！
+
+ブラウザの情報を取得する。
 
 ~~~
 <html>
@@ -152,7 +104,9 @@ element.setAttribute('src', 'https://x.gd/LLx5A');
 ~~~
 
 ---
-## やってみよう２！(BOM)
+## やってみよう２！
+
+ブラウザをコントロールする。
 
 ~~~
 <html>
@@ -203,7 +157,8 @@ button.addEventListener('click', buttonClick);
 ~~~
 
 ~~~
-document.getElementById('weather').addEventListener('click', (event) => {
+document.getElementById('weather')
+.addEventListener('click', function(event) {
   // 保存する文字列の Blob オブジェクトを作成
   const blob = new Blob(["<html><body><h1>hello</h1></body></html>"],
     {type: 'text/html'});
