--- a/2025/2025-02-06-js-lecture3.md
+++ b/2025/2025-02-06-js-lecture3.md
@@ -82,7 +82,7 @@ element.innerText = "Good Morning";
 1. SetTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
 1. 余力があれば、 5秒ごとに "Hello World" と "Good Morning" の表示が入れ替わるようにしてみましょう。
 
-２のヒント： SetInterval を使ってみましょう。
+２のヒント： SetInterval 関数（時計を１秒毎に表示するときに使ったもの）を使ってみましょう。
 
 ---
 ## HTML の挿入
