--- a/2025/2025-02-20-js-lecture4.md
+++ b/2025/2025-02-20-js-lecture4.md
@@ -14,10 +14,9 @@ template: invert
 <!-- footer: JavaScript 入門講座 第４回 -->
 
 ---
-## 練習
+## 練習１のヒント
 
-1. setTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
-1. 余力があれば、 5秒ごとに "Hello World" と "Good Morning" の表示が入れ替わるようにしてみましょう。
+setTimeout 関数を利用して、 5秒後に文字が書き換わるようにしてみましょう。
 
 setTimeout 関数の使い方：
 
@@ -29,7 +28,7 @@ function display() {
     element.innerText = "Good Morning";
 }
 
-setTimeout(display, 1000);
+setTimeout(display, 5000);
 ~~~
 
 ---
@@ -39,8 +38,8 @@ setTimeout(display, 1000);
 
 | | | | | | | | | |
 | :--- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-| 添字 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
-| 中身 | 3 | 1 | 4 | 1 | 5 | 9 | 2 | 6 |
+| 添字（出席番号） | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |
+| 値 | 3 | 1 | 4 | 1 | 5 | 9 | 2 | 6 |
 | | | | | | | | | |
 
 作り方：
@@ -88,7 +87,7 @@ let list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
 ※出来るところまでで構いません。
 
 ---
-## やってみよう１！
+## ブラウザをコントロール１
 
 ブラウザの情報を取得する。
 
@@ -104,7 +103,7 @@ let list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
 ~~~
 
 ---
-## やってみよう２！
+## ブラウザをコントロール２
 
 ブラウザをコントロールする。
 
@@ -122,17 +121,17 @@ let list = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37];
 ---
 ## イベント１
 
-- あるイベントが発生したときに、 JavaScript プログラムを起動させることが出来ます。
+- あるイベント（マウスでクリックなど）が発生したときに、 JavaScript プログラムを起動させることが出来ます。
 - これをイベントの登録などと表現し、プログラムが起動することを発火などと表現します。
 
 ~~~
-<input type="button" value="button" id="myid2" onclick="buttonClick()">
-
 <script type="text/javascript">
     function buttonClick(){
         alert('Click');
     }
 </script>
+
+<input type="button" value="button" id="myid2" onclick="buttonClick()">
 ~~~
 
 ---
@@ -148,6 +147,12 @@ function buttonClick(){
 const button = document.getElementById('myid2');
 button.addEventListener('click', buttonClick);
 ~~~
+
+---
+## 練習
+
+1. マウスをクリックしたら、 "Hello, World" から "Good Morning" へ変化するページを作ってみましょう。
+1. マウスでクリックするたびに、 "Hello, World" と "Good Morning" が切り替わるページを作ってみましょう。
 
 ---
 ## ファイルへの保存
@@ -183,7 +188,7 @@ f.addEventListener('change', function(evt) {
     const input = evt.target;
     const file = input.files[0];
     const reader = new FileReader();
-    reader.onload = () => {
+    reader.onload = function() {
         // 読み出し結果の表示
         console.log(reader.result);
     };
@@ -194,7 +199,7 @@ f.addEventListener('change', function(evt) {
 ---
 ## CSV ファイル
 
-- Excel のような表計算のような構造をもったデータ
+- Excel みたいな表計算ライクな構造をもったデータ
 - １行で一つのデータの塊を表し、各データは記号「`,`」で区切ります。
 
 |タイトル|著者|発行年|
