--- a/2025/2025-03-06-js-lecture5.md
+++ b/2025/2025-03-06-js-lecture5.md
@@ -123,6 +123,8 @@ button.addEventListener('click', buttonClick);
 <h3 id="price">0円</h3>
 ~~~
 
+※この HTML は配布します。
+
 ---
 ## ヒント２
 
@@ -164,5 +166,4 @@ function display() {
 
 1. 消費税を一律 10% で計算する。
 1. 品物を減らせるようにする。
-1. 消費税率の違う物品を混ぜて、消費税を計算する。
 1. カートに入っている以上には減らせないようにする。
