Update and rename 2025-06-01-LT.md to 2025-06-01-LT-gowasm.md

--- a/2025/2025-06-01-LT-gowasm.md
+++ b/2025/2025-06-01-LT-gowasm.md
@@ -25,3 +25,17 @@ Tam@XM研究員
 自己紹介の長い奴は何を語らせても駄目
 
 ---
+## アンケート
+
+動きのある Web ページを作るために一番使っている（もしくは使えそうな）言語はどれですか？
+
+1. Flash
+2. SVG
+3. JavaScript
+
+---
+## 結論
+
+その JavaScript がオワコンという話を展開します。
+
+---
